<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="Choose Currency"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/coinsspinner"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bluebutton"
        android:text="Search" />

</LinearLayout>