<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:ignore="NamespaceTypo">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        mapbox:mapbox_cameraTargetLat="55.943877"
        mapbox:mapbox_cameraTargetLng="-3.187479"
        mapbox:mapbox_cameraZoom="14">

    </com.mapbox.mapboxsdk.maps.MapView>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="185dp"
        android:layout_height="211dp"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:onClick="showGoal"
        android:text="Number of Steps: 0 "
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Nav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="getSpinner"
                android:text="NAVIGATION TO CLOSEST COIN"
                android:textAlignment="center"
                android:textColor="#57bab7"
                android:textSize="12sp" />

            <Button
                android:id="@+id/centremap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="centreMap"
                android:text="CENTRAL CAMPUS"
                android:textAlignment="center"
                android:textColor="#57bab7"
                android:textSize="12sp" />

        </LinearLayout>
    </FrameLayout>

    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom" />

</RelativeLayout>